Update page titles and background colors for improved branding and user experience

--- a/client/src/components/filter/filter.scss
+++ b/client/src/components/filter/filter.scss
@@ -44,7 +44,7 @@
       padding: 10px;
       border: none;
       cursor: pointer;
-      background-color: #fece51;
+      background-color: #4169E1;
 
       img {
         width: 24px;
