--- a/client/src/routes/singlePage/singlePage.scss
+++ b/client/src/routes/singlePage/singlePage.scss
@@ -201,7 +201,7 @@
           align-items: center;
           gap: 5px;
           background-color: white;
-          border: 1px solid #fece51;
+          border: 1px solid #4169E1;
           border-radius: 5px;
           cursor: pointer;
 
