--- a/client/src/components/slider/slider.scss
+++ b/client/src/components/slider/slider.scss
@@ -16,7 +16,7 @@
     height: 100vh;
     top: 0;
     left: 0;
-    background-color: black;
+    background-color: blue;
     display: flex;
     justify-content: space-between;
     align-items: center;
