--- a/client/src/routes/newPostPage/newPostPage.scss
+++ b/client/src/routes/newPostPage/newPostPage.scss
@@ -48,7 +48,7 @@
           width: 30%;
           border-radius: 5px;
           border: none;
-          background-color: teal;
+          background-color: blue;
           color: white;
           font-weight: bold;
           cursor: pointer;
