--- a/client/src/routes/profileUpdatePage/profileUpdatePage.scss
+++ b/client/src/routes/profileUpdatePage/profileUpdatePage.scss
@@ -30,7 +30,7 @@
         padding: 20px;
         border-radius: 5px;
         border: none;
-        background-color: teal;
+        background-color: blue;
         color: white;
         font-weight: bold;
         cursor: pointer;
