--- a/client/src/routes/singlePage/singlePage.scss
+++ b/client/src/routes/singlePage/singlePage.scss
@@ -62,7 +62,8 @@
             }
             .price {
               padding: 5px;
-              background-color: rgba(254, 205, 81, 0.438);
+              background-color: rgba(0, 50, 247, 0.848);
+              color: white;
               border-radius: 5px;
               width: max-content;
               font-size: 20px;
@@ -74,10 +75,11 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
+            color: white;
             gap: 20px;
             padding: 0px 50px;
             border-radius: 10px;
-            background-color: rgba(254, 205, 81, 0.209);
+            background-color: rgba(0, 50, 247, 0.848);
             font-weight: 600;
 
             @include sm {
@@ -139,7 +141,7 @@
         gap: 10px;
 
         img {
-          background-color: rgba(254, 205, 81, 0.209);
+          background-color: rgba(0, 49, 247, 0);
         }
 
         .featureText {
